--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -64,6 +64,13 @@
   margin: 5px;
 }
 
+.descrip_product{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem; 
+  font-size: 0.75rem;
+  line-height: 1rem; 
+}
+
 
 
 
