--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -1,7 +1,7 @@
 .product {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 15px;
   padding: 20px;
   width: 100%;
   max-height: fit-content;
@@ -13,12 +13,20 @@
   position: relative;
   overflow: hidden;
 }
+
+.product:hover {
+  transition: 110ms ease-in;
+  transform: scale(1.04);
+  box-shadow: 1px 1px 6px gray;
+}
+
 .product > img {
   max-height: 200px;
   width: 100%;
   object-fit: contain;
   margin-bottom: 15px;
 }
+
 .product__price {
   margin-top: 5px;
 }
