added utils and added new login, but login files need to be fix

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,6 @@
 .home {
   /* background: #EAEDED; */
-  background: #73AD21;
+  background: #FFA500;
   margin: 0 auto;
   width: 100%;
   overflow: hidden;
