--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,8 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #131921;
+  /* background-color: #131921; */
+  background-color: #2E2EFF;
   position: sticky;
   top: 0;
   z-index: 100;
