--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   /* background-color: #131921; */
-  background-color: #2E2EFF;
+  background: linear-gradient(180deg, #2E2EFF, #FFA500);
   position: sticky;
   top: 0;
   z-index: 100;
