--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,11 +9,18 @@
   z-index: 100;
   width: 100%;
 }
+
 .header__logo {
   width: 100px;
   object-fit: contain;
   margin: 0 20px;
   margin-top: 18px;
+}
+
+.header__filter {
+  width: 100px;
+  object-fit: contain;
+  border-radius: 50px;
 }
 
 .header__search {
