--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -11,10 +11,11 @@
 }
 
 .header__logo {
-  width: 100px;
+  width: 70px;
   object-fit: contain;
-  margin: 0 20px;
-  margin-top: 18px;
+  margin: 0 10px;
+  margin-top: 15px;
+  border-radius: 10px;
 }
 
 .header__filter {
